# temp-c-raylib

./: .gitignore  CMakeLists.txt  README.md  compile-windows.sh  compile.sh  init.sh  makeCustom.sh  runNewMakeRaylib.bash  runNewMakeRaylib.ps1  runNewMakeRaylib.sh  runNewMakeRaylibMac.bash
.github/workflows/: build.yml
src/: CMakeLists.txt  IntoFrom.c  compile.sh  convert-lib.apln  convert.dyalog  convert_normal.apls  convert_normal.dyalog  convert_pointerArgs.apls  convert_pointerArgs.dyalog  temp-c-raylib.c  test.dyalog
